tests/files/parser_tests/should_fail/127.cmdr
//Should not parse
x int = 4;